syntax = 'proto3';
package ludotheque;

option java_multiple_files = true;
option java_package = "dev.orme.ludotheque";
option java_outer_classname = "LudothequeProtos";

message GameListResponse {
  int32 page = 1;
  int32 totalPages = 2;
  int64 count = 3;
  string previous = 4;
  string next = 5;
  repeated GameDTO games = 6;
}

message GetGameResponse {
  GameDTO game = 1;
}

message CreateGameRequest {
  GameDTO game = 1;
}

message CreateGameResponse {
  GameDTO game = 1;
}

message UpdateGameRequest {
  GameDTO game = 1;
}

message UpdateGameResponse {
  GameDTO game = 1;
}

message GameDTO {
  string id = 1;
  string name = 2;
  string description = 3;
  TimestampDTO timeOfCreation = 4;
  repeated GenreDTO genres = 5;
  repeated GameCopyDTO copies = 6;
}

message GameCopyDTO {
  string id = 1;
  GameDTO game = 2;
  RentInformationDTO currentRentInformation = 3;
  GamePriceDTO currentPrice = 4;
  repeated RentInformationDTO rentInformation = 5;
  repeated GamePriceDTO prices = 6;
  WearStatusDTO wearStatus = 7;
  bool isRented = 8;
  bool isActive = 9;
}

enum WearStatusDTO {
 MINT = 0;
 EXCELLENT = 1;
 USED = 2;
 DAMAGED = 3;
}

message GamePriceDTO {
  string id = 1;
  string gameCopyId = 2;
  float price = 3;
  TimestampDTO timeOfPriceSet = 4;
}

message RentInformationDTO {
  string id = 1;
  int32 daysRented = 2;
  GamePriceDTO priceAtRentTime = 3;
  int32 maxRentDaysAtRentTime = 4;
  string gameCopyId = 5;
  string userId = 6;
  TimestampDTO timestampOfRent = 7;
  TimestampDTO timestampOfReturn = 8;
}

message UserDTO {
  string id = 1;
  string username = 2;
  string givenName = 3;
  string familyName = 4;
  string mail = 5;
  bool isActive = 6;
}

message TimestampDTO {
  int64 seconds = 1;
  int64 nanos = 2;
  string timezone = 3;
}

message RentGameDto {
  string userId = 1;
  string gameId = 2;
}

message GenreDTO {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated GameDTO games = 4;
}

message Empty {}